# crates

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: test.yml
src/: lib.rs  shotgun.rs
