[package]
name = "shotgun"
version = "0.1.2"
edition = "2021"
authors = ["Laika Schmidt <36010519+its-laika@users.noreply.github.com>"]
description = "A very simple oneshot single producer, multiple consumer (SPMC) channel"
repository = "https://github.com/its-laika/shotgun"
readme = "README.md"
license = "MIT"
keywords = ["channel", "spmc", "oneshot", "non-unsafe"]
categories = ["concurrency"]
include = ["**/*.rs", "Cargo.toml"]

[lib]
source = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "macros"] }
