[package]
name = "laika"
version = "0.1.3"
edition = "2021"
authors = ["Laika Schmidt <36010519+its-laika@users.noreply.github.com>"]
description = "A namespace crate for sub crates. Only current sub crate is a oneshot single producer, multiple consumer (SPMC) channel"
repository = "https://github.com/its-laika/crates"
readme = "README.md"
license = "MIT"
keywords = ["channel", "spmc", "oneshot", "non-unsafe"]
categories = ["concurrency"]
include = ["**/*.rs", "Cargo.toml"]

[lib]
source = "src/lib.rs"

[features]
shotgun = []

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "macros"] }
